tests/NormalTests/paczka2/big_fuzzy/27141775.err
Error in line 5: MiQBG S863 74,1
Error in line 12: MiQBG A31 28,6
Error in line 15: S562 S562 17,2
Error in line 6: xcENB7sS3 S863 37,1
Error in line 21: fI2Pp39 S562 220,0
Error in line 20: htIJLOl7 S562 14,9
Error in line 29: MiQBG S562 57,81
Error in line 36: xcENB7sS3 S562 12,7
Error in line 23: fI2Pp39 S863 33,3
Error in line 44: MiQBG A31 93,6
Error in line 45: MiQBG S562 74,7
Error in line 50: XDgzzcMZ S863 22,38
Error in line 76: XDgzzcMZ A528 7,0
Error in line 90: htIJLOl7 S863 14,0
Error in line 97: XDgzzcMZ S)62 98,4
Error in line 100: xuMAd S863 214,3
Error in line 112: S562 A31 151f4
Error in line 111: S562 A31 53,7
Error in line 113: S562 S863 7,0
Error in line 122: MiQBG A528 99,7
Error in line 98: fI2Pp39 A528 178,2
Error in line 147: fI2Pp39 A528 97,3
Error in line 155: fI2Pp39 S562 41,9
Error in line 160: fI2Pp39 S863 77,3
Error in line 164: fI2Pp39 S863 48,6
Error in line 171: xuMAd A528 69,7
Error in line 175: xuMAd S562 81,2
Error in line 200: S562 A528 97,9
Error in line 204: xuMAd S863 33,5
Error in line 205: XDgzzcMZ A31 69,1
Error in line 207: xuMAd A528 74,7
Error in line 208: fI2Pp39 A528 47,6
Error in line 245: xuMAd S863 98,7
